--- a/tweets-cards/src/Views/Tweets/Tweets.module.css
+++ b/tweets-cards/src/Views/Tweets/Tweets.module.css
@@ -13,12 +13,17 @@
     color: gray;
 }
 
+.Tweets_filter {
+    margin-left: 30px;
+}
+
 .Tweets_title {
     color: #5736A3;
     font-family: 'Montserrat';
     font-weight: 500;
     font-size: 36px;
     margin-left: 30%;
+    margin-right: 30%;
 }
 
 .Tweets_loadmore {
