--- a/tweets-cards/src/components/Card/Card.module.css
+++ b/tweets-cards/src/components/Card/Card.module.css
@@ -16,7 +16,7 @@
     position: relative;
     padding: 20px;
     height: 100%;
-    background-image: url('../images/bgx2.png');
+    background-image: url('../../images/bgx2.png');
     background-repeat: no-repeat;
     background-size: 308px;
     background-position-x: 36px;
