--- a/tweets-cards/src/Views/Tweets/Tweets.module.css
+++ b/tweets-cards/src/Views/Tweets/Tweets.module.css
@@ -28,7 +28,8 @@
 
 .Tweets_loadmore {
     display: block;
-    margin: 40px auto 0;
+    margin-top: 40px;
+    margin-left: calc(50% - 196px) ;
     width: 196px;
     padding: 14px;
     font-family: 'Montserrat';
@@ -37,7 +38,7 @@
     line-height: 1.22;
     text-transform: uppercase;
     color: #373737;
-    border-radius: 10;
+    border-radius: 10px;
     background: #EBD8FF;
     box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
     border: none;
@@ -45,7 +46,8 @@
 
 .Tweets_listGrid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 10px;
     grid-row-gap: 3em;
     list-style: none;
     padding: 0;
